--- a/car.html
+++ b/car.html
@@ -26,11 +26,13 @@
         <button onclick="consultarCarros()" > Consultar Carros</button>
         
         <div>
-            <input type="text" id="Cname" placeholder="name">
-            <input type="text" id="Cbrand" placeholder="brand">
-            <input type="number" id="Cyear" placeholder="year">
-            <input type="text" id="Cdescription" placeholder="description">    
+            <form id="carf">
+            <input type="text" id="Cname" placeholder="Nombre">
+            <input type="text" id="Cbrand" placeholder="Marca">
+            <input type="number" id="Cyear" placeholder="Año">
+            <input type="text" id="Cdescription" placeholder="Descripción">    
         </div>
         <button onclick="guardarCarros()">Guardar Carros</button>
+        </form>
     </body>
     </html>
