--- a/client.html
+++ b/client.html
@@ -26,11 +26,13 @@
         <button onclick="consultarClientes()">Consultar Clientes</button>
         
         <div>
-            <input type="text" id="CLemail" placeholder="email">
-            <input type="text" id="CLpassword" placeholder="password">
-            <input type="text" id="CLname" placeholder="name">
-            <input type="number" id="CLage" placeholder="age">  
+            <form id="clif">
+            <input type="text" id="CLemail" placeholder="Correo">
+            <input type="password" id="CLpassword" placeholder="Clave">
+            <input type="text" id="CLname" placeholder="Nombre Completo">
+            <input type="number" id="CLage" placeholder="Edad">  
         </div>
         <button onclick="guardarClientes()">Guardar Clientes</button>
+        </form>
     </body>
     </html>
