--- a/gama.html
+++ b/gama.html
@@ -27,9 +27,11 @@
         <button onclick="consultarGamas()" > Consultar Gamas</button>
         
         <div>
-            <input type="text" id="Gname" placeholder="name">
-            <input type="text" id="Gdescription" placeholder="description">
+            <form id="gamaf">
+            <input type="text" id="Gname" placeholder="Nombre">
+            <input type="text" id="Gdescription" placeholder="Descripción">
         </div>
         <button id="gG" onclick="guardarGamas()">Guardar Gamas</button>
+        </form>
     </body>
 </html>
