--- a/message.html
+++ b/message.html
@@ -25,8 +25,10 @@
         <div id="resultado4"></div>
         <button onclick="consultarMensajes()">Consultar Mensajes</button>    
         <div>
-            <input type="text" id="Mmessagetext" placeholder="que te parece....">
+            <form id="menf">
+            <input type="text" id="Mmessagetext" placeholder="Comentarios....">
         </div>
         <button onclick="guardarMensajes()">Guardar Mensajes</button>
+        </form>
     </body>
     </html>
